--- a/css/multimedia-ug.css
+++ b/css/multimedia-ug.css
@@ -1,5 +1,5 @@
 .multimedia-ug {
-  background: url(../images/background-video.png);
+  background: url(../images/background-video.webp);
   background-repeat: repeat;
   margin-top: -1px;
 }
@@ -76,10 +76,6 @@
   border-radius: 5px;
   margin-left: auto;
   margin-right: auto;
-}
-
-.multimedia-ug .content-multimedia .section-container {
-  
 }
 
 .multimedia-ug .content-multimedia .list-videos-ug .under-mustard{
